// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PDFObjective.vue matches objective snapshot 1`] = `
<section id="pdf-objective" class="resume-section mb-3">
  <div id="objective" class="d-flex align-items-center">
    <h4 class="heading heading-4" style="font-family: 'Saira Extra Condensed';">
      Objective
    </h4>
  </div>
  <div id="objective" class="d-flex align-items-center">
    <div class="resume-item d-flex flex-column justify-content-between">
      <div class="aboutme-paragraph mb-2 mb-md-1" style="font-family: 'Open Sans';">
        <p>
          sample aboutMe
        </p>
      </div>
    </div>
  </div>
</section>
`;

exports[`PDFObjective.vue matches renderPDF objective snapshot 1`] = `
<section id="pdf-objective" class="resume-section-render mb-3">
  <div id="objective" class="d-flex align-items-center">
    <h4 class="heading heading-4" style="font-family: 'Saira Extra Condensed';">
      Objective
    </h4>
  </div>
  <div id="objective" class="d-flex align-items-center">
    <div class="resume-item d-flex flex-column justify-content-between">
      <div class="aboutme-paragraph mb-2 mb-md-1" style="font-family: 'Open Sans';">
        <p>
          sample aboutMe
        </p>
      </div>
    </div>
  </div>
</section>
`;
